--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -3,7 +3,12 @@
 one:
   title: MyString
   description: MyText
-
+  rule_id: 1
+  period_id: 1
+  
+  
 two:
   title: MyString
   description: MyText
+  rule_id: 1
+  period_id: 1
