--- a/test/fixtures/events_students.yml
+++ b/test/fixtures/events_students.yml
@@ -4,8 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  student_id: 1
+  event_id: 1
+  
+two:
+  student_id: 2
+  event_id: 1
